--- a/03-detalles/src/components/Inputs.css
+++ b/03-detalles/src/components/Inputs.css
@@ -1,7 +1,11 @@
-input[type=text] {
+input[type=number] {
     margin: 10px 10px;
     padding: 10px;
 }
 div{
     margin: 10px;
+}
+span{
+    font-style: oblique;
+    font-weight: lighter;
 }
